force-app/main/default/objects/Airline__c/Airline__c.object-meta.xml
<CustomObject>
    <description>Airline Master</description>
    <label>Airline</label>
    <nameField>
        <label>Airline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>