force-app/main/default/objects/Airline__c/fields/Airline_IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>Airline_IATA_Code__c</fullName>
    <label>Airline IATA Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>