force-app/main/default/objects/Airline__c/fields/Airline_ICAO_Code__c.field-meta.xml
<CustomField>
    <fullName>Airline_ICAO_Code__c</fullName>
    <label>Airline ICAO Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>