force-app/main/default/objects/Airline__c/fields/Is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Is_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inactive</label>
    <type>Checkbox</type>
</CustomField>