force-app/main/default/objects/Airline__c/fields/TAN_Number__c.field-meta.xml
<CustomField>
    <fullName>TAN_Number__c</fullName>
    <label>TAN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>