force-app/main/default/objects/Airline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Airline_IATA_Code__c</columns>
    <columns>Airline_ICAO_Code__c</columns>
    <columns>Short_Name__c</columns>
    <columns>Account_No__c</columns>
    <columns>TAN_Number__c</columns>
    <columns>PAN_Number__c</columns>
    <columns>Is_Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>